test/Fail/Issue4927-3.agda
_ : @♭ Set → Set₁
_ = λ _ → Set
