test/Fail/Issue4927-3.err
Issue4927-3.agda:1.5-7: error: [AttributeKindNotEnabled]
Cohesion attributes have not been enabled (use --cohesion to enable
them): ♭
